<resources>
    <string name="app_name">EucalyptApp</string>
    <string name="roll">Roll</string>
    <string name="roll_button_text">Let\'s Roll!</string>
    <string name="rolled_dice_view_description">Rolled dice with certain number up</string>
    <string name="name">Gandalf the Grey</string>
    <string name="yellow_star">Yellow Star</string>
    <string name="bio">This is a text
        \n\nwith many
        \n\nnewlines
        \n\nI love making fire with my magic wand. I am a fire wizard after all!
        \n\nI fought the Balgrog of Ugul from the core of the earth to the top of the earth. After
        that I went to get a healthy breakfast at my favorite restaurant. I did fight the Balrog for
        several days that felt like several weeks so I was obviously starving. I hear the Hobbits
        have tasty breakfasts.
        \n\nThen a Hobbit came to me and said: \"The quick brown fox jumps over the lazy dog. The
        quick brown fox jumps over the lazy dog. The quick brown fox jumps over the lazy dog. The
        quick brown fox jumps over the lazy dog.\"
    </string>
    <string name="nickname_edit_hint">what is your nickname</string>
    <string name="done_button_text">done</string>
    <string name="menu_dice_roller">Dice Roller</string>
    <string name="menu_about_me">About Me</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="menu_color_my_views">Color My Views</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box 2</string>
    <string name="box_five">Box Five</string>
    <string name="box_four">Box Four</string>
    <string name="box_three">Box Three</string>
    <string name="how_to_play">How to play:</string>
    <string name="tap_the_screen_and_buttons">Tap the screen and buttons.</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>

    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <string name="menu_trivia_game">Trivia Game</string>
    <string name="title_dice_roller">Dice Roller</string>
    <string name="title_about_me">About Me</string>
    <string name="title_color_my_views">Color My Views</string>
    <string name="title_trivia_game">Trivia Game</string>
    <string name="title_game_won">You won!</string>
    <string name="title_game_lost">Try again!</string>
    <string name="title_about_fragment">About</string>
    <string name="play_button_text">Play</string>
    <string name="title_image_content_description">Trivia game start image: Big questionmark with the words Android Trivia</string>
    <string name="next_match_button_text">Next Match</string>

    <string name="dollar_sign">$</string>
    <string name="zero">0</string>
    <string name="dessert_sold">Desserts Sold</string>
    <string name="share_text">I\'ve clicked %1$d Desserts for a total of %2$d$ #AndroidDessertClicker</string>
    <string name="menu_dessert_pusher">Dessert Pusher</string>
    <string name="title_rules_fragment">Rules</string>
    <string name="title_dessert_pusher">Dessert Pusher</string>

    <string name="skip">Skip</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">guess the word!</string>
    <string name="play_button">Play</string>
    <string name="get_ready">Get ready to</string>
    <string name="got_it">Got it</string>
    <string name="word_is">The word is…</string>
    <string name="quote_format">\"%s\"</string>
    <string name="score_format">Current Score: %d</string>
    <string name="menu_guess_the_word">Guess the Word</string>
    <string name="title_guesstheword_start">Guess the Word Start</string>
    <string name="title_guesstheword_play">Guess the Word Play</string>
    <string name="title_guesstheword_score">Guess the Word Score</string>


    <!-- App title and fragment titles -->
    <string name="sleep_tracker_fragment">SleepTrackerFragment</string>
    <string name="sleep_quality_fragment">SleepQualityFragment</string>

    <!-- Button labels -->
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="clear">Clear</string>

    <!-- contentDescription strings for quality icons -->
    <string name="quality_0">Sleep Quality 0</string>
    <string name="quality_1">Sleep Quality 1</string>
    <string name="quality_2">Sleep Quality 2</string>
    <string name="quality_3">Sleep Quality 3</string>
    <string name="quality_4">Sleep Quality 4</string>
    <string name="quality_5">Sleep Quality 5</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="start_time"><![CDATA[<b>Start:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="quality"><![CDATA[<b>Quality:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>

    <!-- Sleep quality strings -->
    <string name="how_was_hour_sleep">How was your sleep?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>

    <!-- Toast to play after Clear button has been pressed -->
    <string name="cleared_message">All your data is gone forever.</string>


    <string name="header_text">Sleep Results</string>
    <string name="close">Close</string>
    <string name="minutes_length">%d minutes on %s</string>
    <string name="hours_length">%d hours on %s</string>
    <string name="seconds_length">%d seconds on %s</string>
    <string name="sleep_quality_image_description">Sleep quality Image</string>
    <string name="menu_sleep_tracker">Sleep Tracker</string>


    <!-- Fan Controller -->
    <string name="fan_control">Fan Control</string>
    <string name="fan_off">off</string>
    <string name="fan_low">1</string>
    <string name="fan_medium">2</string>
    <string name="fan_high">3</string>
    <string name="menu_fan_controller">Fan Controller</string>
    <string name="menu_mini_paint">Mini Paint</string>

    <!-- Mini Paint -->
    <string name="canvasContentDescription">Mini Paint is a simple line drawing tool.
    Drag your fingers to draw. Rotate the phone to clear.</string>
    <string name="sleep_results_header">Sleep Results</string>

</resources>
