<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navDessertPusherFragment"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_dessert_pusher" />

        <item
            android:id="@+id/nav_dice_roller"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_dice_roller" />
        <item
            android:id="@+id/nav_about_me"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_about_me" />
        <item
            android:id="@+id/nav_color_my_views"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_color_my_views" />
        <item
            android:id="@+id/nav_title_fragment"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_trivia_game" />
        <item
            android:id="@+id/nav_rules_fragment"
            android:icon="@drawable/rules"
            android:title="@string/rules" />
        <item
            android:id="@+id/nav_about_fragment"
            android:icon="@drawable/android"
            android:title="@string/about" />
    </group>
</menu>